plugins {
    id 'war'
    id 'java'
    id "io.freefair.lombok" version "6.5.1"
    id 'io.freefair.aspectj.post-compile-weaving' version "6.4.1"
}

group = 'org.example'

java {
    sourceCompatibility = JavaLanguageVersion.of(17)
    targetCompatibility = JavaLanguageVersion.of(17)
}

repositories {
    mavenCentral()
}

ext {
    mapstructVersion = "1.5.5.Final"
    mockitoVersion = '5.6.0'
}

dependencies {
    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
    implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    implementation group: 'org.yaml', name: 'snakeyaml', version: '2.0'
    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.6.0'
    implementation "org.aspectj:aspectjrt:1.9.8"
    implementation 'org.aspectj:aspectjweaver:1.9.8'
    implementation 'org.aspectj:aspectjtools:1.9.8'
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
    testImplementation 'org.junit.jupiter:junit-jupiter'
    compileOnly "org.mapstruct:mapstruct:${mapstructVersion}"
    compileOnly("org.aspectj:aspectjrt:1.8.5")
    compileOnly("org.aspectj:aspectjweaver:1.8.5")

}

test {
    useJUnitPlatform()
}